welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not found: type h
	var T:Array[h]
                    ^Array1:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
	var T:Array[h]
            ^Array1:7: error: value update is not a member of java.awt.Color
		getCouleurSol()=T(i);
                ^