welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var h=getMondeHauteur() 
	var l=getMondeLargeur()
	var T:Array[h]
	for (i <- 0 to h) {
		getCouleurSol()=T(i);
		avance();
	}
	avance();
	gauche();
	baisseBrosse();
	avance()
}
